--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: 'Inconsolata';
-    src: url('/fonts/Inconsolata.woff2') format('woff2'), url('/fonts/Inconsolata.woff') format('woff'), url('/fonts/Inconsolata.ttf') format('truetype');
+    src: url('./fonts/Inconsolata.woff2') format('woff2'), url('./fonts/Inconsolata.woff') format('woff'), url('./fonts/Inconsolata.ttf') format('truetype');
 }
 
 body {
